test-expected/large/casmanagement/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    foo.com/duname: cas-administration
    foo.com/duversion: 1.1.8-20190924.1569378146973
    foo.com/version: 1.1.8
  labels:
    app.kubernetes.io/name: casadministration
    helm.sh/chart: casadministration-1.1.8
  name: casmanagement
spec:
  ports:
  - name: casmanagement
    port: 80
    protocol: TCP
    targetPort: casmanagement
  selector:
    app.kubernetes.io/name: casadministration
  type: ClusterIP
